--- a/master/from-vim.html
+++ b/master/from-vim.html
@@ -146,7 +146,7 @@ action itself (delete, change, yank, etc) comes second. A cursor is simply a
 single width selection.</p>
 <p>See also Kakoune's <a href="https://github.com/mawww/kakoune/wiki/Migrating-from-Vim">Migrating from Vim</a>.</p>
 <blockquote>
-<p>TODO: Mention texobjects, surround, registers</p>
+<p>TODO: Mention textobjects, surround, registers</p>
 </blockquote>
 
                     </main>
